Fixed Options menu and ldebugged updateAccount

--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -8,7 +8,7 @@
     tools:context=".activities.DashboardActivity">
 
     <include
-        android:id="@+id/myToolbar"
+        android:id="@+id/main_Toolbar"
         layout="@layout/toolbar" />
 
     <FrameLayout
