--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -48,9 +48,7 @@
                             android:text="@string/signup"
                             android:textColor="@color/textColorPrimary"
                             android:textSize="26sp"
-                            android:textStyle="bold"
-
-                            />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/signUp_loginText"
