--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar" >
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorAccentGreen</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:fontFamily" >@font/montserrat</item>
+        <item name="android:fontFamily">@font/montserrat</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
     </style>
-
 
 
     <style name="Button" parent="Base.TextAppearance.AppCompat.Button">
@@ -40,7 +39,6 @@
     </style>
 
 
-
     <style name="HeaderThemeWhite" parent="AppTheme">
         <item name="android:textAllCaps">true</item>
         <item name="android:fontFamily">@font/josefin_sans</item>
@@ -61,15 +59,12 @@
     </style>
 
 
-
     <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:windowBackground">@drawable/background_custom_dialog</item>
     </style>
 
 
-
-
-    <style name="AppDrawableTheme" parent="ThemeOverlay.AppCompat.Dark" >
+    <style name="AppDrawableTheme" parent="ThemeOverlay.AppCompat.Dark">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorAccentGreen</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -82,10 +77,10 @@
     </style>
 
 
-    <style name="ButtonBorder" parent="Widget.AppCompat.Button.Colored"/>
+    <style name="ButtonBorder" parent="Widget.AppCompat.Button.Colored" />
 
     <style name="ButtonBorder.Primary">
-        <item name="android:background" >@color/colorAccentGreen</item>
+        <item name="android:background">@color/colorAccentGreen</item>
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">12sp</item>
@@ -97,6 +92,7 @@
         <item name="android:background">@color/colorAccentGreen</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
     <style name="MyToolbarWallet" parent="AppTheme">
@@ -152,7 +148,7 @@
         <item name="android:listSelector">@android:color/transparent</item>
     </style>
 
-    <style name="DialogFullscreen" parent="@style/Preference.Material" >
+    <style name="DialogFullscreen" parent="@style/Preference.Material">
         <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
@@ -231,10 +227,12 @@
         <item name="actionMenuTextAppearance">@style/MyMenuTextAppearance</item>
         <item name="android:typeface">serif</item>
     </style>
-    <style name="MyMenuTextAppearance" parent="android:TextAppearance.Holo.Widget.ActionBar.Menu" >
+
+    <style name="MyMenuTextAppearance" parent="android:TextAppearance.Holo.Widget.ActionBar.Menu">
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">16sp</item>
     </style>
+
     <style name="TabTheme">
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
@@ -243,6 +241,7 @@
         <item name="android:includeFontPadding">false</item>
 
     </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -251,16 +250,18 @@
         <item name="windowNoTitle">true</item>
         <item name="actionMenuTextAppearance">@style/MyMenuTextAppearance</item>
     </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="Button_DW" parent="Base.TextAppearance.AppCompat.Button" >
+    <style name="Button_DW" parent="Base.TextAppearance.AppCompat.Button">
         <item name="background">@color/colorPrimary</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">@font/montserrat</item>
     </style>
+
     <style name="textAppearance_general">
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">false</item>
@@ -268,6 +269,7 @@
         <item name="android:fontFamily">@font/montserrat</item>
         <item name="android:textSize">14sp</item>
     </style>
+
     <style name="HeaderThemeActivity">
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">false</item>
