--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -130,6 +130,7 @@
                                 app:layout_constraintGuide_percent="0.2" />
 
                             <TextView
+                                android:id="@+id/txt_user_address"
                                 android:layout_width="151dp"
                                 android:layout_height="40dp"
                                 android:layout_marginStart="@dimen/dimen_10dp"
