--- a/app/src/main/res/menu/toolbar_main_menu.xml
+++ b/app/src/main/res/menu/toolbar_main_menu.xml
@@ -19,5 +19,25 @@
         android:icon="@drawable/ic_action_currency"
         android:title="@string/label_currency"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/toolbar_ic_search"
+        android:icon="@drawable/ic_search_menu"
+        android:title="@string/actionSearch"
+        app:showAsAction="ifRoom" />
+    <!--app:actionViewClass="android.widget.SearchView"-->
+
+    <item
+        android:id="@+id/toolbar_ic_favorite"
+        android:title="@string/favorite"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
+
+
+    <item
+        android:id="@+id/toolbar_ic_cart"
+        android:actionLayout="@layout/buy_inputs_animated_ic_cart"
+        android:icon="@drawable/toggle_ic_cart"
+        android:title="@string/actionCart"
+        app:showAsAction="always" />
 
 </menu>
