--- a/app/src/main/res/layout/buy_inputs_maps.xml
+++ b/app/src/main/res/layout/buy_inputs_maps.xml
@@ -10,7 +10,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".app.cabral.emaisha.Maps.MapActivity" />
+        tools:context=".app.myfarmnow.myfarmcrop.Maps.MapActivity" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
