--- a/app/src/main/res/layout/buy_inputs_categories_3.xml
+++ b/app/src/main/res/layout/buy_inputs_categories_3.xml
@@ -14,8 +14,8 @@
 
     <ImageView
         android:id="@+id/category_icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:background="@color/palebrown"
         android:scaleType="fitCenter" />
 
@@ -45,6 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
+            android:visibility="gone"
             android:gravity="center_horizontal" />
 
     </LinearLayout>
