--- a/app/src/main/res/layout/buy_inputs_f_products_vertical.xml
+++ b/app/src/main/res/layout/buy_inputs_f_products_vertical.xml
@@ -43,13 +43,104 @@
 
     </LinearLayout>-->
 
+    <LinearLayout
+        android:id="@+id/topBar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:background="@color/windowBackgroundDark"
+        android:clickable="true"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txt_category_no"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_30dp"
+                android:fontFamily="@font/josefin_sans_semibold"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/dimen_20dp"
+                android:text="120 items"
+                android:textColor="#222222"
+                android:textSize="@dimen/dimen_20sp"
+                android:theme="@style/HeaderThemeActivity" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/sort_list"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:visibility="invisible"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:clickable="false"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_sort"
+                android:tint="@color/black" />
+
+            <TextView
+                android:id="@+id/sort_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="start|center_vertical"
+                android:maxLines="1"
+                android:text="@string/Newest"
+                android:textAlignment="viewStart"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/filter_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:clickable="false"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/toggle_ic_filter"
+                android:tint="@color/black" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="start|center_vertical"
+                android:maxLines="1"
+                android:text="@string/filter"
+                android:textAlignment="viewStart"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/products_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/loading_bar"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/topBar"
         android:padding="10dp" />
 
     <TextView
@@ -88,72 +179,7 @@
         android:indeterminateTintMode="src_in"
         android:paddingBottom="10dp" />
 
-    <LinearLayout
-        android:id="@+id/bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/windowBackgroundDark"
-        android:clickable="true"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp">
 
-        <LinearLayout
-            android:id="@+id/sort_list"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:clickable="false"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_sort"
-                android:tint="@color/colorAccentGreen" />
-
-            <TextView
-                android:id="@+id/sort_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="start|center_vertical"
-                android:maxLines="1"
-                android:text="@string/Newest"
-                android:textAlignment="viewStart"
-                android:textColor="@color/colorAccentGreen"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-
-        <ToggleButton
-            android:id="@+id/layout_toggleBtn"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/toggle_ic_view"
-            android:backgroundTint="@color/colorAccentGreen"
-            android:checked="true"
-            android:textOff=""
-            android:textOn="" />
-
-        <ToggleButton
-            android:id="@+id/filterBtn"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/toggle_ic_filter"
-            android:backgroundTint="@color/colorAccentGreen"
-            android:checked="false"
-            android:textOff=""
-            android:textOn="" />
-
-    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progressBar"
