--- a/app/src/main/res/layout/buy_inputs_homepage_9.xml
+++ b/app/src/main/res/layout/buy_inputs_homepage_9.xml
@@ -12,13 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/windowBackground"
-        app:elevation="0dp"
-        app:layout_behavior="com.myfarmnow.myfarmcrop.customs.AppBarFlingScrollBehavior">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:fitsSystemWindows="true"
+        app:elevation="0dp" >
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -69,49 +70,11 @@
                     app:tabMode="fixed"
                     app:tabSelectedTextColor="@color/textColorSecondaryDark"
                     app:tabTextColor="@color/textColorSecondaryLight" />
-
-                <com.myfarmnow.myfarmcrop.customs.CustomViewPager
-                    android:id="@+id/myViewPager"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/windowBackground" />
-
             </LinearLayout>
 
         </FrameLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <TextView
-            android:layout_marginTop="5dp"
-            android:id="@+id/allproducts_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
-            android:drawableStart="@drawable/ic_list"
-            android:drawableLeft="@drawable/ic_list"
-            android:drawablePadding="12dp"
-            android:drawableTint="@color/iconsLight"
-            android:text="All Products"
-            android:textColor="@color/textColorSecondary"
-            android:textSize="18sp" />
-
-
-        <FrameLayout
-            android:layout_below="@id/allproducts_header"
-            android:id="@+id/home9_products_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/windowBackground"
-            android:orientation="vertical" />
-
-    </RelativeLayout>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
