--- a/app/src/main/res/layout/buy_inputs_f_products_vertical.xml
+++ b/app/src/main/res/layout/buy_inputs_f_products_vertical.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/windowBackground">
+    android:background="@color/windowBackgroundDark">
 
 
     <!--<LinearLayout
@@ -52,7 +52,6 @@
         android:clickable="true"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingStart="10dp"
         android:paddingEnd="10dp">
 
         <LinearLayout
