--- a/app/src/main/res/layout/buy_inputs_products.xml
+++ b/app/src/main/res/layout/buy_inputs_products.xml
@@ -26,13 +26,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/gray_head"
+        android:alpha="0.7"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/txt_category_title"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_30dp"
-            android:background="@color/gray_head"
             android:fontFamily="@font/josefin_sans_semibold"
             android:gravity="center_vertical"
             android:paddingLeft="@dimen/dimen_20dp"
