--- a/app/src/main/res/layout/layout_product_major.xml
+++ b/app/src/main/res/layout/layout_product_major.xml
@@ -1,200 +1,256 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="205dp"
+    android:layout_marginStart="@dimen/dimen_10dp"
+    android:layout_marginTop="@dimen/dimen_5dp"
+    android:layout_marginEnd="@dimen/dimen_10dp"
+    android:layout_marginBottom="@dimen/dimen_5dp"
+    app:cardElevation="@dimen/dimen_5dp"
     app:cardUseCompatPadding="true">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/product_cover"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/lg_card_cover_height"
-            android:clickable="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/placeholder" />
+        <RelativeLayout
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/dimen_10dp"
+            android:layout_marginTop="@dimen/dimen_10dp">
 
-        <com.facebook.shimmer.ShimmerFrameLayout
-            android:id="@+id/shimmerFrame"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/lg_card_cover_height"
-            android:alpha=".7"
-            app:shimmer_duration="1500">
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/lg_card_cover_height"
-                android:clickable="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/placeholder" />
+                android:layout_height="match_parent"
+                android:padding="@dimen/dimen_10dp"
+                android:src="@drawable/image_20" />
 
-        </com.facebook.shimmer.ShimmerFrameLayout>
+            <TextView
+                android:layout_width="43dp"
+                android:layout_height="43dp"
+                android:background="@drawable/round_badge_drawable"
+                android:fontFamily="@font/josefin_sans"
+                android:gravity="center"
+                android:padding="6dp"
+                android:text="16% OFF"
+                android:textColor="@android:color/white"
+                app:autoSizeTextType="uniform" />
 
-
-        <ImageView
-            android:id="@+id/product_item_tag_new"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:src="@drawable/ic_new_tag" />
+        </RelativeLayout>
 
         <LinearLayout
-            android:id="@+id/saleLayout"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="end"
-            android:gravity="end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/productItemTagSale"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAccentGreen"
-                android:padding="2dp"
-                android:text="SALE"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="11sp" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/productItemTagOff"
-                android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/dimen_20dp"
+                        android:layout_marginTop="@dimen/dimen_20dp"
+                        android:layout_marginEnd="@dimen/dimen_20dp"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/josefin_sans"
+                            android:maxLines="1"
+                            android:text="Butanil S"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dimen_5dp"
+                            android:ellipsize="end"
+                            android:fontFamily="@font/josefin_sans"
+                            android:maxLines="1"
+                            android:text="60% EC"
+                            android:textSize="18sp" />
+
+                        <RelativeLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:id="@+id/first_star"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_centerVertical="true"
+                                android:src="@drawable/ic_star_rate" />
+
+                            <ImageView
+                                android:id="@+id/second_star"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_centerVertical="true"
+                                android:layout_toEndOf="@id/first_star"
+                                android:src="@drawable/ic_star_rate" />
+
+
+                            <ImageView
+                                android:id="@+id/third_star"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_centerVertical="true"
+                                android:layout_toEndOf="@id/second_star"
+                                android:src="@drawable/ic_star_rate" />
+
+                            <ImageView
+                                android:id="@+id/fourth_star"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_centerVertical="true"
+                                android:layout_toEndOf="@id/third_star"
+                                android:src="@drawable/ic_star_rate" />
+
+                            <ImageView
+                                android:id="@+id/fifth_star"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_centerVertical="true"
+                                android:layout_toEndOf="@id/fourth_star"
+                                android:src="@drawable/ic_star_border" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_marginStart="@dimen/margin_10"
+                                android:layout_marginTop="@dimen/dimen_5dp"
+                                android:layout_toEndOf="@id/fifth_star"
+                                android:ellipsize="end"
+                                android:fontFamily="@font/josefin_sans"
+                                android:maxLines="1"
+                                android:text="430 Ratings"
+                                android:textSize="14sp" />
+
+                        </RelativeLayout>
+
+                    </LinearLayout>
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:layout_marginBottom="@dimen/margin_10"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_corner"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="3.4dp">
+
+                    <Spinner
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:entries="@array/buy_produce_quantity"
+                        android:gravity="center"
+                        android:spinnerMode="dropdown" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="10dp"
+                        android:src="@drawable/ic_baseline_arrow_drop_down_24" />
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/productItemTagSale"
-                android:layout_marginTop="2dp"
-                android:background="@color/colorAccentGreen"
-                android:padding="2dp"
-                android:text=" OFF"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="11sp" />
+                android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dimen_10dp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/dimen_20dp"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/josefin_sans"
+                            android:text="UGX : 15,000" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dimen_5dp"
+                            android:fontFamily="@font/josefin_sans"
+                            android:text="UGX : 1,200"
+                            android:textColor="@android:color/black"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                    <Button
+                        android:layout_width="76dp"
+                        android:layout_height="36dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="@dimen/dimen_20dp"
+                        android:background="@drawable/rounded_corners2_button_green"
+                        android:fontFamily="@font/josefin_sans"
+                        android:gravity="center"
+                        android:text="Add"
+                        android:textAlignment="center"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/product_category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_below="@id/product_title"
-            android:maxLines="1"
-            android:minLines="1"
-            android:text="category"
-            android:textColor="@color/textColorSecondaryLight"
-            android:textSize="11sp" />
-
-        <androidx.appcompat.widget.AppCompatRatingBar
-            android:id="@+id/product_rating_bar"
-            style="?attr/ratingBarStyleSmall"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
-            android:numStars="5"
-            android:rating="3"
-            android:stepSize="0.5" />
-
-        <TextView
-            android:id="@+id/product_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/product_cover"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
-            android:gravity="start"
-            android:maxLines="1"
-            android:minLines="1"
-            android:maxLength="15"
-            android:layout_marginTop="4dp"
-            android:text="Product Title"
-            android:textAlignment="viewStart"
-            android:textColor="@color/textColorSecondaryDark"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/product_price_new"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/product_category"
-            android:text="$00000.00"
-            android:maxLength="9"
-            android:layout_marginStart="4dp"
-            android:textColor="@color/textColorSecondaryLight"
-            android:textSize="11sp"
-            android:layout_marginRight="4dp"
-            android:layout_marginLeft="4dp" />
-
-        <TextView
-            android:id="@+id/product_price_old"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_below="@id/product_title"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_toEndOf="@+id/product_price_new"
-            android:layout_toRightOf="@+id/product_price_new"
-            android:text="$00000.00"
-            android:maxLength="9"
-            android:textColor="@color/textColorSecondaryLight"
-            android:textSize="11sp" />
-
-        <ToggleButton
-            android:id="@+id/product_like_btn"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="4dp"
-            android:background="@drawable/toggle_ic_favorite"
-            android:textOff=""
-            android:textOn="" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/product_card_Btn"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_below="@id/product_price_new"
-            android:layout_marginTop="4dp"
-            android:background="@drawable/rounded_corners_button_green"
-            android:text="@string/addToCart"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sm_card_btn_text" />
-
-        <ImageButton
-            android:id="@+id/product_card_img_btn"
-            android:layout_width="@dimen/dimen_30dp"
-            android:layout_height="@dimen/dimen_30dp"
-            android:layout_below="@id/product_cover"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginTop="@dimen/dimen_5dp"
-            android:layout_marginBottom="@dimen/dimen_5dp"
-            android:background="@color/colorPrimary"
-            android:src="@drawable/ic_add_white_24dp" />
-
-    </RelativeLayout>
-
-    <ImageView
-        android:id="@+id/product_checked"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="0.5"
-        android:background="@color/black"
-        android:clickable="true"
-        android:paddingBottom="40dp"
-        android:scaleType="center"
-        android:visibility="gone"
-        android:src="@drawable/checked"
-        android:tint="@color/white" />
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
