--- a/app/src/main/res/layout/layout_news_all.xml
+++ b/app/src/main/res/layout/layout_news_all.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/news_item"
@@ -38,13 +39,13 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:src="@drawable/ic_calendar"
-        android:tint="@color/colorAccentGreen"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="2dp"
         android:layout_below="@+id/news_title"
         android:layout_alignStart="@+id/news_title"
         android:layout_alignLeft="@+id/news_title"
-        android:layout_marginRight="2dp" />
+        android:layout_marginRight="2dp"
+        app:tint="@color/colorAccentGreen" />
 
     <TextView
         android:id="@+id/news_date"
