--- a/app/src/main/res/layout/news.xml
+++ b/app/src/main/res/layout/news.xml
@@ -11,61 +11,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        app:layout_behavior=".customs.AppBarFlingScrollBehavior">
+        app:layout_behavior="com.myfarmnow.myfarmcrop.customs.AppBarFlingScrollBehavior">
 
-        <FrameLayout
-            app:layout_scrollFlags="scroll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/banner_height" >
-
-                    <com.daimajia.slider.library.SliderLayout
-                        android:id="@+id/banner_slider"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        custom:indicator_visibility="visible"
-                        custom:auto_cycle="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true" />
-
-                    <com.daimajia.slider.library.Indicators.PagerIndicator
-                        android:id="@+id/banner_slider_indicator"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:selected_color="@color/colorPrimary"
-                        app:unselected_color="@color/windowBackground"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="5dp"
-                        style="@style/AndroidImageSlider_Indicator" />
-
-                </RelativeLayout>
-
-            </LinearLayout>
-
-        </FrameLayout>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
+            android:layout_marginTop="?attr/actionBarSize"
+            app:tabMode="fixed"
+            app:tabIndicatorHeight="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="fixed"
-            app:tabIndicatorHeight="2dp"
-            app:tabBackground="@color/white"
-            android:background="@color/white"
-            app:tabTextColor="@color/textColorSecondaryLight"
-            app:tabIndicatorColor="@color/textColorSecondaryDark"
-            app:tabSelectedTextColor="@color/textColorSecondaryDark"
-            style="@style/MyCustomTabLayout" />
+            android:background="@color/colorPrimary"
+            app:tabSelectedTextColor="@android:color/white"
+            app:tabIndicatorColor="@color/gray_head"
+            app:tabTextAppearance="@style/MyMenuTextAppearance"
+            app:tabTextColor="@color/gray_head">
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tabNewest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/newest" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tabNewsCategories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="News Categories" />
+
+        </com.google.android.material.tabs.TabLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -82,6 +56,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom" >
+
+
     </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
